# python-p2p-project-chatty

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: mvp_requirements.md
scripts/: create_zipball.py
src/chatty/: __init__.py  __main__.py  models.py  network.py
src/chatty/ui/: __init__.py  main_window.py  styles.py
tests/: test_init.py  test_models.py  test_network.py  test_ui.py
