[project]
name = "chatty"
version = "0.1.0"
description = "Peer-to-peer chat on your local network"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "pyside6>=6.11.0",
    "zeroconf>=0.148.0",
]

[project.scripts]
chatty = "chatty:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chatty"]

[tool.pytest.ini_options]
qt_api = "pyside6"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-qt>=4.5.0",
]
